--- a/style/suganya.css
+++ b/style/suganya.css
@@ -790,7 +790,7 @@
           align-items: center;
 }
 
-.working_process_container .working_text .vertical-text {
+.working_process_container .working_text .vertical_process {
   -webkit-writing-mode: vertical-lr;
       -ms-writing-mode: tb-lr;
           writing-mode: vertical-lr;
@@ -819,5 +819,104 @@
 .working_process_container .iframe iframe {
   width: 100%;
   height: 100%;
+}
+
+.service_content {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+  background-color: #1b3b6f;
+  padding: 4em;
+}
+
+.service_content .business_registration {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.service_content .business_registration .service_box a {
+  text-decoration: none;
+  margin-bottom: 10px;
+  display: block;
+  background-color: blue;
+  font-size: 20px;
+  line-height: 50px;
+  padding-left: 15px;
+  padding-right: 20px;
+  color: White;
+}
+
+.service_content .business_registration .service_box a:hover {
+  background-color: Violet;
+  color: red;
+}
+
+.service_content .business_registration .vertical_service {
+  -webkit-writing-mode: vertical-lr;
+      -ms-writing-mode: tb-lr;
+          writing-mode: vertical-lr;
+  font-size: 22px;
+  letter-spacing: 12px;
+  color: gray;
+  margin-top: 60px;
+  margin-left: -60px;
+}
+
+.service_content .registration_box {
+  background-color: white;
+  margin-left: 30px;
+}
+
+.service_content .registration_box img {
+  width: 30%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: auto;
+  padding: 10px;
+}
+
+.service_content .registration_box h5 {
+  font-size: 25px;
+  text-align: center;
+  margin-bottom: 30px;
+  margin-top: 20px;
+}
+
+.service_content .registration_box p {
+  text-align: center;
+  margin-bottom: 30px;
+  font-size: 17px;
+  line-height: 1.5em;
+}
+
+.service_content .registration_box button {
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+  width: 100px;
+  height: 30px;
+  border: none;
+  background-color: orangered;
+  outline: none;
+  color: White;
+  font-size: 16px;
+  z-index: -1;
+}
+
+.service_content .registration_box button:hover {
+  background-color: blue;
+  color: Violet;
+  border: 1px solid Violet;
 }
 /*# sourceMappingURL=suganya.css.map */
