--- a/style/suganya.scss
+++ b/style/suganya.scss
@@ -527,7 +527,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    .vertical-text {
+    .vertical_process {
       writing-mode: vertical-lr;
       letter-spacing: 12px;
       font-size: 25px;
@@ -551,5 +551,83 @@
   .iframe iframe {
     width: 100%;
     height: 100%;
+  }
+}
+
+.service_content {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  background-color: $blue;
+  padding: 4em;
+  .business_registration {
+    display: flex;
+    .service_box {
+      a {
+        text-decoration: none;
+        margin-bottom: 10px;
+        display: block;
+        background-color: blue;
+        font-size: 20px;
+        line-height: 50px;
+        padding-left: 15px;
+        padding-right: 20px;
+        color: White;
+        &:hover {
+          background-color: Violet;
+          color: red;
+        }
+      }
+    }
+    .vertical_service {
+      writing-mode: vertical-lr;
+      font-size: 22px;
+      letter-spacing: 12px;
+      color: gray;
+      margin-top: 60px;
+      margin-left: -60px;
+    }
+  }
+  .registration_box {
+    background-color: white;
+    margin-left: 30px;
+    img {
+      width: 30%;
+      display: flex;
+      margin: auto;
+      padding: 10px;
+    }
+    h5 {
+      font-size: 25px;
+      text-align: center;
+      margin-bottom: 30px;
+      margin-top: 20px;
+    }
+    p {
+      text-align: center;
+      margin-bottom: 30px;
+      font-size: 17px;
+      line-height: 1.5em;
+    }
+
+    button {
+      margin: auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      width: 100px;
+      height: 30px;
+      border: none;
+      background-color: orangered;
+      outline: none;
+      color: White;
+      font-size: 16px;
+      z-index: -1;
+    }
+    button:hover {
+      background-color: blue;
+      color: Violet;
+      border: 1px solid Violet;
+    }
   }
 }
