--- a/style/suganya.css
+++ b/style/suganya.css
@@ -919,4 +919,36 @@
   color: Violet;
   border: 1px solid Violet;
 }
+
+.user_info {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (25%)[4];
+      grid-template-columns: repeat(4, 25%);
+  background-color: #3d5a80;
+  width: 100%;
+  height: 200px;
+}
+
+.user_info .user_list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  border: 1px solid white;
+}
+
+.user_info .user_list img {
+  width: 20%;
+}
+
+.user_info .user_list:hover {
+  background-color: aqua;
+  color: black;
+}
 /*# sourceMappingURL=suganya.css.map */
