--- a/style/suganya.scss
+++ b/style/suganya.scss
@@ -631,3 +631,24 @@
     }
   }
 }
+
+.user_info {
+  display: grid;
+  grid-template-columns: repeat(4, 25%);
+  background-color: #3d5a80;
+  width: 100%;
+  height: 200px;
+  .user_list {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid white;
+    img {
+      width: 20%;
+    }
+    &:hover {
+      background-color: aqua;
+      color: black;
+    }
+  }
+}
