--- a/style/suganya.css
+++ b/style/suganya.css
@@ -82,7 +82,7 @@
     display: none;
     position: fixed;
     right: 0;
-    width: 50%;
+    width: 70%;
     height: 100vh;
     margin-top: 0;
     top: 0;
@@ -763,9 +763,16 @@
 }
 
 .business h2 {
-  font-size: 38px;
-  padding: 1.5em;
-  color: #6d6875;
+  margin-left: 50px;
+  font-size: 35px;
+}
+
+@media (max-width: 900px) {
+  .business h2 {
+    font-size: 25px;
+    text-align: center;
+    color: #6d6875;
+  }
 }
 
 .business span {
@@ -777,6 +784,21 @@
   display: grid;
   -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
+}
+
+@media (max-width: 900px) {
+  .working_process_container {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 1000px) {
+  .working_process_container {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
 }
 
 .working_process_container .working_text {
@@ -821,6 +843,12 @@
   height: 100%;
 }
 
+@media (max-width: 1000px) {
+  .working_process_container .iframe iframe {
+    display: none;
+  }
+}
+
 .service_content {
   display: -ms-grid;
   display: grid;
@@ -830,10 +858,29 @@
   padding: 4em;
 }
 
+@media (max-width: 900px) {
+  .service_content {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    padding: 10px;
+  }
+}
+
 .service_content .business_registration {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+@media (max-width: 900px) {
+  .service_content .business_registration {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
 }
 
 .service_content .business_registration .service_box a {
@@ -853,6 +900,13 @@
   color: red;
 }
 
+@media (max-width: 900px) {
+  .service_content .business_registration .service_box {
+    width: 100%;
+    text-align: center;
+  }
+}
+
 .service_content .business_registration .vertical_service {
   -webkit-writing-mode: vertical-lr;
       -ms-writing-mode: tb-lr;
@@ -864,9 +918,22 @@
   margin-left: -60px;
 }
 
+@media (max-width: 900px) {
+  .service_content .business_registration .vertical_service {
+    display: none;
+  }
+}
+
 .service_content .registration_box {
   background-color: white;
   margin-left: 30px;
+}
+
+@media (max-width: 900px) {
+  .service_content .registration_box {
+    margin-left: 0;
+    margin-bottom: 20px;
+  }
 }
 
 .service_content .registration_box img {
@@ -930,10 +997,23 @@
   height: 200px;
 }
 
+@media (max-width: 900px) {
+  .user_info {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    padding: 1em;
+    height: auto;
+  }
+}
+
 .user_info .user_list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -943,12 +1023,122 @@
   border: 1px solid white;
 }
 
+@media (max-width: 900px) {
+  .user_info .user_list {
+    padding: 1em;
+  }
+}
+
 .user_info .user_list img {
   width: 20%;
+  margin-bottom: 10px;
 }
 
 .user_info .user_list:hover {
   background-color: aqua;
   color: black;
+}
+
+.corpiz_app {
+  background-image: url(/asset/images/mobile-app-bg.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  position: relative;
+  padding: 58px 40px;
+  margin-top: 6rem;
+  -webkit-transform: translate(17%, 10%);
+          transform: translate(17%, 10%);
+  width: 75%;
+  border-radius: 20px;
+}
+
+.corpiz_app .corpiz {
+  padding-right: 500px;
+}
+
+.corpiz_app .corpiz h2 {
+  font-size: 40px;
+  margin-bottom: 20px;
+}
+
+.corpiz_app .corpiz p {
+  margin-bottom: 20px;
+  line-height: 30px;
+}
+
+.corpiz_app .corpiz img {
+  width: 200px;
+}
+
+.corpiz_app .app {
+  position: absolute;
+}
+
+.corpiz_app .app img {
+  -webkit-transform: translate(158%, -88%);
+          transform: translate(158%, -88%);
+  width: 100%;
+}
+
+@media (max-width: 1440px) {
+  .corpiz_app .app img {
+    -webkit-transform: translate(130%, -88%);
+            transform: translate(130%, -88%);
+  }
+}
+
+@media (max-width: 1345px) {
+  .corpiz_app .app img {
+    -webkit-transform: translate(110%, -88%);
+            transform: translate(110%, -88%);
+  }
+}
+
+@media (max-width: 1220px) {
+  .corpiz_app .app img {
+    -webkit-transform: translate(90%, -88%);
+            transform: translate(90%, -88%);
+  }
+}
+
+@media (max-width: 1080px) {
+  .corpiz_app .app img {
+    -webkit-transform: translate(70%, -88%);
+            transform: translate(70%, -88%);
+  }
+}
+
+@media (max-width: 1000px) {
+  .corpiz_app .app img {
+    -webkit-transform: translate(60%, -89%);
+            transform: translate(60%, -89%);
+  }
+}
+
+@media (max-width: 940px) {
+  .corpiz_app .app img {
+    -webkit-transform: translate(50%, -88%);
+            transform: translate(50%, -88%);
+  }
+}
+
+@media (max-width: 880px) {
+  .corpiz_app .app img {
+    -webkit-transform: translate(42%, -88%);
+            transform: translate(42%, -88%);
+  }
+}
+
+@media (max-width: 840px) {
+  .corpiz_app .app img {
+    -webkit-transform: translate(35%, -88%);
+            transform: translate(35%, -88%);
+  }
+}
+
+@media (max-width: 800px) {
+  .corpiz_app .app img {
+    display: none;
+  }
 }
 /*# sourceMappingURL=suganya.css.map */
