--- a/style/suganya.scss
+++ b/style/suganya.scss
@@ -57,7 +57,7 @@
       display: none;
       position: fixed;
       right: 0;
-      width: 50%;
+      width: 70%;
       height: 100vh;
       margin-top: 0;
       top: 0;
@@ -88,6 +88,7 @@
           position: relative;
           font-size: 20px;
           font-weight: bold;
+
           @media (max-width: 1200px) {
             color: #ffffff;
             font-weight: bold;
@@ -511,9 +512,14 @@
 
 .business {
   h2 {
-    font-size: 38px;
-    padding: 1.5em;
-    color: $gray;
+    margin-left: 50px;
+    font-size: 35px;
+
+    @media (max-width: 900px) {
+      font-size: 25px;
+      text-align: center;
+      color: $gray;
+    }
   }
   span {
     color: $blue;
@@ -523,6 +529,13 @@
 .working_process_container {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  @media (max-width: 900px) {
+    grid-template-columns: 1fr;
+    margin-bottom: 20px;
+  }
+  @media (max-width: 1000px) {
+    grid-template-columns: 1fr;
+  }
   .working_text {
     display: flex;
     justify-content: space-around;
@@ -551,6 +564,9 @@
   .iframe iframe {
     width: 100%;
     height: 100%;
+    @media (max-width: 1000px) {
+      display: none;
+    }
   }
 }
 
@@ -559,8 +575,17 @@
   grid-template-columns: repeat(4, 1fr);
   background-color: $blue;
   padding: 4em;
+  @media (max-width: 900px) {
+    grid-template-columns: 1fr;
+    padding: 10px;
+  }
   .business_registration {
     display: flex;
+    @media (max-width: 900px) {
+      justify-content: center;
+      align-items: center;
+    }
+
     .service_box {
       a {
         text-decoration: none;
@@ -577,6 +602,10 @@
           color: red;
         }
       }
+      @media (max-width: 900px) {
+        width: 100%;
+        text-align: center;
+      }
     }
     .vertical_service {
       writing-mode: vertical-lr;
@@ -585,11 +614,19 @@
       color: gray;
       margin-top: 60px;
       margin-left: -60px;
+      @media (max-width: 900px) {
+        display: none;
+      }
     }
   }
   .registration_box {
     background-color: white;
     margin-left: 30px;
+    @media (max-width: 900px) {
+      margin-left: 0;
+      margin-bottom: 20px;
+    }
+
     img {
       width: 30%;
       display: flex;
@@ -638,17 +675,92 @@
   background-color: #3d5a80;
   width: 100%;
   height: 200px;
+  @media (max-width: 900px) {
+    grid-template-columns: 1fr;
+    padding: 1em;
+    height: auto;
+  }
   .user_list {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     border: 1px solid white;
+    @media (max-width: 900px) {
+      padding: 1em;
+    }
     img {
       width: 20%;
+      margin-bottom: 10px;
     }
     &:hover {
       background-color: aqua;
       color: black;
+    }
+  }
+}
+
+.corpiz_app {
+  background-image: url(/asset/images/mobile-app-bg.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  position: relative;
+  padding: 58px 40px;
+  margin-top: 6rem;
+  // margin-left: 180px;
+  transform: translate(17%, 10%);
+
+  width: 75%;
+  border-radius: 20px;
+
+  .corpiz {
+    padding-right: 500px;
+
+    h2 {
+      font-size: 40px;
+      margin-bottom: 20px;
+    }
+    p {
+      margin-bottom: 20px;
+      line-height: 30px;
+    }
+    img {
+      width: 200px;
+    }
+  }
+  .app {
+    position: absolute;
+
+    img {
+      transform: translate(158%, -88%);
+      width: 100%;
+      @media (max-width: 1440px) {
+        transform: translate(130%, -88%);
+      }
+      @media (max-width: 1345px) {
+        transform: translate(110%, -88%);
+      }
+      @media (max-width: 1220px) {
+        transform: translate(90%, -88%);
+      }
+      @media (max-width: 1080px) {
+        transform: translate(70%, -88%);
+      }
+      @media (max-width: 1000px) {
+        transform: translate(60%, -89%);
+      }
+      @media (max-width: 940px) {
+        transform: translate(50%, -88%);
+      }
+      @media (max-width: 880px) {
+        transform: translate(42%, -88%);
+      }
+      @media (max-width: 840px) {
+        transform: translate(35%, -88%);
+      }
+      @media (max-width: 800px) {
+        display: none;
+      }
     }
   }
 }
