--- a/style/suganya.css
+++ b/style/suganya.css
@@ -1141,4 +1141,10 @@
     display: none;
   }
 }
+
+.partner {
+  font-size: 25px;
+  margin-top: 80px;
+  text-align: center;
+}
 /*# sourceMappingURL=suganya.css.map */
