--- a/styles/subaa.scss
+++ b/styles/subaa.scss
@@ -1351,10 +1351,18 @@ section{
 section{
     .footer{
         background-image: url(../assets/images/background-services.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
         padding: 70px 70px 10px;
+        @media (max-width:785px) {
+            padding: 50px 30px 10px;
+        }
         .footer-flex{
             display: flex;
             gap: 40px;
+            @media (max-width:950px) {
+                display: block;
+            }
             .flex{
                 h1{
                     color: $orange;
@@ -1367,6 +1375,7 @@ section{
                     text-decoration: none;
                     text-transform: capitalize;
                     padding-bottom: 30px;
+                    font-size: 14px;
                     li{
                         color: $white;
                         display: flex;
@@ -1398,9 +1407,18 @@ section{
             list-style: none;
             gap:30px;
             font-size: 14px;
+            @media (max-width:950px) {
+                gap: 10px;
+            }
+            @media (max-width:705px) {
+                display: block;
+            }
             li{
                 &:hover{
                     color: $orange;
+                }
+                @media (max-width:705px) {
+                    padding-bottom: 10px;
                 }
             }
             }
